Fix sidebar overlap - add left margin for fixed sidebar
Use margin-left to clear the fixed sidebar, calc() for flexible
width, and max-width to cap content size.

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -18,13 +18,13 @@
 
 .page {
   @include breakpoint($large) {
-    float: right;
-    width: 850px;
-    padding-right: 0;
+    margin-left: 250px;
+    width: calc(100% - 270px);
+    max-width: 900px;
   }
 
   @include breakpoint($x-large) {
-    width: 1150px;
+    max-width: 1100px;
   }
 
   .page__inner-wrap {
